tools/k8s/ingress/1-ingress-api.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookmarker-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
        - pathType: Prefix
          path: /bookmarker-api(/|$)(.*)
          backend:
            service:
              name: bookmarker-api-service
              port: 
                number: 8081
