tools/k8s/ingress/2-ingress-ui.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookmarker-ui-ingress
spec:
  rules:
    - http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: bookmarker-ui-service
              port: 
                number: 3000
